--- a/description.conf
+++ b/description.conf
@@ -4,19 +4,11 @@
 # as you want.
 
 ***HEADER_START***
-[Please read our posting guidelines.](http://www.reddit.com/r/CalgarySocialClub/comments/t3tj6/posting_guidelines/)
+Here is an example header that preceeds the calendar.
 ***HEADER_END***
 
 ***FOOTER_START***
-[Twitter](http://twitter.com/YYCSocialClub)
+Here is a foot that succeeds the calendar.
 
-*This subreddit is moderated by [MeetupCal-bot.](https://github.com/llevel/MeetupCal-bot)*
+*This subreddit is moderated by [MeetCal-bot.](https://github.com/llevel/MeetCal-bot)*
 ***FOOTER_END***
-
-***HARASS_MESSAGE_START***
-Hey!
-
-It looks like you were trying to make a post so it shows up on the calendar. Unfortunately you messed up the title a little bit. Give it another shot using the format [EVENT][LOCATION][DATE][TIME]. Don't put the end-time or date in your title, because it can cause problems. If you want to try again, feel free to delete the post and try again.
-
-*This was sent automagically using the [MeetupCal-bot.](https://github.com/llevel/MeetupCal-bot)*
-***HARASS_MESSAGE_END***
